NAM | Objeto jsonParser
Convertimos los arreglos de la Informacion de la BD - Tabla Paises en un Objeto Json

--- a/symfony/app/config/routing.yml
+++ b/symfony/app/config/routing.yml
@@ -1,3 +1,4 @@
+## Redireccionamos las Rutas al Fichero
 app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+    resource: "@AppBundle/Resources/config/routing.yml"
+    prefix: /
