NAM | Definicion del Servicio de Login
Creacion del Servici de Login, con el uso de la Libreria JWT y un Routin para la misma. Se volvio a recrear los mapping de la BD y las Entities; ya que faltaba el campo password_usuario a la tabla: TblUsuarios

--- a/symfony/src/AppBundle/Resources/config/routing/default.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/default.yml
@@ -11,4 +11,10 @@ default_index:
 default_pais:
     path: /pais
     defaults: { _controller: "AppBundle:Default:pais" }
-    methods: GET    
+    methods: GET
+    
+# Ruta para el Login de la API
+default_login:
+    path: /login
+    defaults: { _controller: "AppBundle:Default:login" }
+    methods: POST
