--- a/symfony/src/AppBundle/Resources/config/routing/default.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/default.yml
@@ -11,7 +11,7 @@ default_index:
 default_pais:
     path: /pais
     defaults: { _controller: "AppBundle:Default:pais" }
-    methods: GET
+    methods: POST
     
 # Ruta para el Login de la API
 default_login:
