NAM | Subida de Imagen - Usuario
Se agrego el controlador del usuario, la opcion de Subir la Imagen del usuario.

--- a/symfony/src/AppBundle/Resources/config/routing/usuario.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/usuario.yml
@@ -10,3 +10,8 @@ usuario_edit:
     path: /edit
     defaults: { _controller: "AppBundle:Usuario:edit" }
     methods: POST
+    
+usuario_upload_image:
+    path: /upload-image-user
+    defaults: { _controller: "AppBundle:Usuario:uploadImage" }
+    methods: POST
