NAM | Se recreo al entidad: TblDocumentos
Se volvio a recrear la entidad: TblDocumentos en la PC Laptop local; ya que hay un error de Driver de PostGresql no encontrado, por mientras se resulve se trabajara asi.

--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblDocumentos.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblDocumentos.orm.yml
@@ -44,6 +44,23 @@ BackendBundle\Entity\TblDocumentos:
             type: date
             nullable: true
             column: fecha_ingreso
+        fechaModificacion:
+            type: date
+            nullable: true
+            column: fecha_modificacion
+        miniImagen:
+            type: string
+            nullable: true
+            length: 200
+            options:
+                fixed: false
+            column: mini_imagen
+        status:
+            type: string
+            nullable: true
+            length: 5
+            options:
+                fixed: false
     manyToOne:
         codCorrespondenciaDet:
             targetEntity: TblCorrespondenciaDet
