NAM | Editar Documento
Se Agrego la Accion de Editar el Documento, como parametro el Codigo del mismo y validando que solo el usuario que lo ingreso lo pueda Modifcar.

--- a/symfony/src/AppBundle/Resources/config/routing/documentos.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/documentos.yml
@@ -5,3 +5,8 @@ documento_new:
     path: /new
     defaults: { _controller: "AppBundle:Documentos:new" }
     methods: POST
+
+documento_edit:
+    path: /edit/{id}
+    defaults: { _controller: "AppBundle:Documentos:edit", id:null }
+    methods: POST
